--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="goods-and-manufacturers">
         <div class="container">
           <div class="goods">
-            <div>
+            <div class="header-block">
               <h2>Популярные товары:</h2>
               <a href="#">Все популярные товары</a>
             </div>
@@ -130,11 +130,11 @@
                   <figure class="catalog-item-image">
                     <img src="img/snippet-1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
                   </figure>
-                    <a class="catalog-category">
-                      <h3>
-                        Перфоратор BOSCH BFG 9000
-                      </h3>
+                  <h3>
+                    <a class="catalog-category" href="#">
+                      Перфоратор BOSCH BFG 9000
                     </a>
+                  </h3>
                   <p class="old-price">32500 ₽.</p>
                   <p class="new-price">25500 ₽.</p>
                 </li>
@@ -143,8 +143,9 @@
                     <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                   </figure>
                   <h3>
-                    <span class="catalog-category">Перфоратор BOSCH</span>
-                    <span class="catalog-item-title">BFG 3000</span>
+                    <a class="catalog-category" href="#">
+                      Перфоратор BOSCH BFG 3000
+                    </a>
                   </h3>
                   <p class="old-price">22500 ₽.</p>
                   <p class="new-price">15500 ₽.</p>
@@ -154,8 +155,9 @@
                     <img src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                   </figure>
                   <h3>
-                    <span class="catalog-category">Перфоратор BOSCH</span>
-                    <span class="catalog-item-title">BFG 6000</span>
+                    <a class="catalog-category" href="#">
+                      Перфоратор BOSCH BFG 6000
+                    </a>
                   </h3>
                   <p class="old-price">30500 ₽.</p>
                   <p class="new-price">25500 ₽.</p>
@@ -165,16 +167,17 @@
                     <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                   </figure>
                   <h3>
-                    <span class="catalog-category">Перфоратор BOSCH</span>
-                    <span class="catalog-item-title">BFG 2000</span>
+                    <a class="catalog-category" href="#">
+                      Перфоратор BOSCH BFG 2000
+                    </a>
                   </h3>
                   <p class="new-price">12500 ₽.</p>
                 </li>
               </ul>
             </div>
           </div>
-          <section class="brands"> <!-- популярные производители -->
-            <div>
+          <section class="brands">
+            <div class="header-block">
               <h2>Популярные производители:</h2>
               <a href="#">Все производители</a>
             </div>
@@ -226,7 +229,7 @@
 
       <section class="delivery-and-services">
         <div class="container">
-          <div class="services">
+          <div class="header-services">
             <h2>Сервисы</h2>
             <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           </div>
@@ -238,19 +241,19 @@
                 <li><a href="#">Кредит</a></li>
               </ul>
             </div>
-            <section class="delivery-description">
+            <div class="services-description">
               <h3>Доставка</h3>
               <p>
                 Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!
               </p>
-            </section>
-            <section class="security-description">
+            </div>
+            <div class="services-description">
               <h3>Гарантия</h3>
               <p>
                 Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.
               </p>
-            </section>
-            <section class="credit-description">
+            </div>
+            <div class="services-description">
               <h3>Кредит</h3>
               <p>
                 Залезть в долговую яму стало проще.<br> Кредитные консультации придут вам на помощь.
@@ -258,7 +261,7 @@
               <a class="button" href="#" tabindex="0">
                 Отправить заявку
               </a>
-            </section>
+            </div>
           </div> <!-- services-description -->
         </div> <!-- container -->
       </section>
@@ -270,19 +273,19 @@
             <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
             <p>Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
             <ul class="list-orders">
-              <li class="order-1">Деловые линии</li>
-              <li class="order-2">Автотрейдинг</li>
-              <li class="order-3">ЖелДорЭкспедиция</li>
+              <li><a class="order-1" href="#">Деловые линии</a></li>
+              <li><a class="order-2" href="#">Автотрейдинг</a></li>
+              <li><a class="order-3" href="#">ЖелДорЭкспедиция</a></li>
             </ul>
-            <a class="button" href="about.html" tabindex="0">Подробнее о компании</a>
+            <a class="btn" href="about.html" tabindex="0">Подробнее о компании</a>
           </div>
           <div class="contacts">
             <h2>Контакты</h2>
             <p>Вы можете забрать товар сами, заехав в наш офис.</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716364103!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1542449925434" width="400" height="300" allowfullscreen></iframe>
-            <button class="button" name="write-us">
+            <a class="btn" name="write-us">
               Заблудились? Напишите нам!
-            </button>
+            </a>
           </div>
         </div>
       </section>
