Закончил главную [CSS]

--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
     <footer class="main-footer">
       <div class="container">
         <div class="footer-top">
-          <span class="header-logo">Техномарт</span>
-          <ul class="footer-top-navigation">
+          <a class="footer-logo">Техномарт</a>
+          <ul class="footer-top-nav">
             <li><a href="about-us.html">Компания</a></li>
-            <li><a href="news.html">Новости</a></li>
+            <li><a href="#">Новости</a></li>
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="delivery.html">Доставка</a></li>
             <li><a href="contacts.html">Контакты</a></li>
@@ -307,9 +307,9 @@
         <div class="footer-middle">
           <address class="footer-contacts">
             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-            +7(812)555-05-55
+            +7 (812) 555-05-55
           </address>
-          <ul class="footer-top-navigation">
+          <ul class="footer-bottom-nav">
             <li><a href="materials.html">Материалы</a></li>
             <li><a href="equipment.html">Техника</a></li>
             <li><a href="tool.html">Инструмент</a></li>
@@ -328,11 +328,11 @@
             <li><a class="social-button-facebook" href="#" aria-label="Фейсбук"></a></li>
             <li><a class="social-button-instagram" href="#" aria-label="Инстаграм"></a></li>
           </ul>
-          <p>
+          <p class="academy">
             Обратная связь:
             <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </p>
-          <p>
+          <p class="academy">
             Разработано &#8211;
             <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
           </p>
