--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <a class="book-cart" href="#">Закладки: 0</a>
           <a class="book-cart" href="#">Корзина: 0</a>
           <a class="checkout" href="#">Оформить заказ</a>
-        </div> <!-- header-top -->
-      </div> <!-- container -->
+        </div>
+      </div>
       <div class="header-middle">
         <div class="container">
           <h1 class="heading">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
@@ -297,11 +297,11 @@
         <div class="footer-top">
           <a class="footer-logo">Техномарт</a>
           <ul class="footer-top-nav">
-            <li><a href="about-us.html">Компания</a></li>
+            <li><a href="#">Компания</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="delivery.html">Доставка</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
           </ul>
         </div>
         <div class="footer-middle">
@@ -316,7 +316,7 @@
             <li><a href="special-offers.html">Спецпредложения</a></li>
           </ul>
         </div>
-      </div> <!-- container -->
+      </div>
       <div class="footer-bottom">
         <div class="container">
           <p class="copyright">
@@ -336,8 +336,8 @@
             Разработано &#8211;
             <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
           </p>
-        </div> <!-- container -->
-      </div> <!-- footer-bottom -->
+        </div>
+      </div>
     </footer>
 
     <!-- popUp Cart -->
