--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <a class="checkout" href="#">Оформить заказ</a>
         </div>
       </div>
-      <div class="header-middle">
-        <div class="container">
+      <div class="container">
+        <div class="header-middle">
           <h1 class="heading">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
           <div class="header-contacts">
             <a href="tel:+78125550555">+7 (812) 555-05-55</a>
@@ -124,8 +124,8 @@
               <h2>Популярные товары:</h2>
               <a href="#">Все популярные товары</a>
             </div>
-            <div class="goods-list">
-              <ul>
+            <div class="goods-block">
+              <ul class="goods-list">
                 <li class="catalog-item">
                   <figure class="catalog-item-image">
                     <img src="img/snippet-1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
@@ -266,8 +266,8 @@
         </div> <!-- container -->
       </section>
 
-      <section class="company-and-contacts">
-        <div class="container">
+      <div class="container">
+        <section class="company-and-contacts">
           <div class="about-us">
             <h2>Компания «Техномарт»</h2>
             <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
@@ -287,8 +287,8 @@
               Заблудились? Напишите нам!
             </a>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
 
     <!-- ФУТЕР ФУТЕР ФУТЕР -->
@@ -317,25 +317,27 @@
           </ul>
         </div>
       </div>
-      <div class="footer-bottom">
+      <div class="footer-bottom-block">
         <div class="container">
-          <p class="copyright">
-            &copy; 2010-2017 Компания «Техномарт»<br>
-            Все права защищены
-          </p>
-          <ul class="social-buttons">
-            <li><a class="social-button-vkontakte" href="#" aria-label="Вконтакте"></a></li>
-            <li><a class="social-button-facebook" href="#" aria-label="Фейсбук"></a></li>
-            <li><a class="social-button-instagram" href="#" aria-label="Инстаграм"></a></li>
-          </ul>
-          <p class="academy">
-            Обратная связь:
-            <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-          </p>
-          <p class="academy">
-            Разработано &#8211;
-            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-          </p>
+          <div class="footer-bottom">
+            <p class="copyright">
+              &copy; 2010-2017 Компания «Техномарт»<br>
+              Все права защищены
+            </p>
+            <ul class="social-buttons">
+              <li><a class="social-button-vkontakte" href="#" aria-label="Вконтакте"></a></li>
+              <li><a class="social-button-facebook" href="#" aria-label="Фейсбук"></a></li>
+              <li><a class="social-button-instagram" href="#" aria-label="Инстаграм"></a></li>
+            </ul>
+            <p class="academy">
+              Обратная связь:
+              <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </p>
+            <p class="academy">
+              Разработано &#8211;
+              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+            </p>
+          </div>
         </div>
       </div>
     </footer>
