--- a/index.html
+++ b/index.html
@@ -227,43 +227,67 @@
         </div>
       </div>
 
-      <section class="delivery-and-services">
+      <section class="delivery-and-services"> <!-- не могу понять как это делать, видимо принцип работы блока как у слайдера -->
+
         <div class="container">
+
           <div class="header-services">
             <h2>Сервисы</h2>
             <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+
           </div>
+
           <div class="services-description">
-            <div class="services-list">
+
+            <div class="services-item-1">
               <ul class="services-navigation">
                 <li><a href="#">Доставка</a></li>
                 <li><a href="#">Гарантия</a></li>
                 <li><a href="#">Кредит</a></li>
               </ul>
+              <div class="services-description">
+                <h3>Доставка</h3>
+                <p>
+                  Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!
+                </p>
+              </div>
             </div>
-            <div class="services-description">
-              <h3>Доставка</h3>
-              <p>
-                Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!
-              </p>
+
+            <div class="services-item-2">
+              <ul class="services-navigation">
+                <li><a href="#">Доставка</a></li>
+                <li><a href="#">Гарантия</a></li>
+                <li><a href="#">Кредит</a></li>
+              </ul>
+              <div class="services-description">
+                <h3>Гарантия</h3>
+                <p>
+                  Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.
+                </p>
+              </div>
             </div>
-            <div class="services-description">
-              <h3>Гарантия</h3>
-              <p>
-                Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.
-              </p>
+
+            <div class="services-item-3">
+              <ul class="services-navigation">
+                <li><a href="#">Доставка</a></li>
+                <li><a href="#">Гарантия</a></li>
+                <li><a href="#">Кредит</a></li>
+              </ul>
+              <div class="services-description">
+                <h3>Кредит</h3>
+                <p>
+                  Залезть в долговую яму стало проще.<br> Кредитные консультации придут вам на помощь.
+                </p>
+                <a class="button" href="#" tabindex="0">
+                  Отправить заявку
+                </a>
+              </div>
             </div>
-            <div class="services-description">
-              <h3>Кредит</h3>
-              <p>
-                Залезть в долговую яму стало проще.<br> Кредитные консультации придут вам на помощь.
-              </p>
-              <a class="button" href="#" tabindex="0">
-                Отправить заявку
-              </a>
-            </div>
+
           </div> <!-- services-description -->
+
         </div> <!-- container -->
+
       </section>
 
       <div class="container">
@@ -272,6 +296,8 @@
             <h2>Компания «Техномарт»</h2>
             <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
             <p>Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
+          </div>
+          <div class="about-gallery">
             <ul class="list-orders">
               <li><a class="order-1" href="#">Деловые линии</a></li>
               <li><a class="order-2" href="#">Автотрейдинг</a></li>
