--- a/index.html
+++ b/index.html
@@ -120,10 +120,12 @@
       <div class="goods-and-manufacturers">
         <div class="container">
           <div class="goods">
-            <div class="header-block">
+
+            <div class="header-block-main">
               <h2>Популярные товары:</h2>
               <a href="#">Все популярные товары</a>
             </div>
+
             <div class="goods-block">
               <ul class="goods-list">
                 <li class="catalog-item">
@@ -176,11 +178,14 @@
               </ul>
             </div>
           </div>
+
           <section class="brands">
-            <div class="header-block">
+
+            <div class="header-block-main">
               <h2>Популярные производители:</h2>
               <a href="#">Все производители</a>
             </div>
+
             <ul class="brands-list">
               <li>
                 <a class="brands-list-item" href="#">
