--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
       </div>
     </main>
 
-    <!-- ФУТЕР ФУТЕР ФУТЕР -->
+    <!-- ФУТ0Р -->
     <footer class="main-footer">
       <div class="container">
         <div class="footer-top">
