--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       </div>
       <div class="container">
         <nav class="main-navigation">
-          <ul class="footer-top-navigation">
-            <li><a>Главная</a></li>
+          <ul class="header-top-navigation">
+            <li><a href="#">Главная</a></li>
             <li><a href="about-us.html">Компания</a></li>
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="news.html">Новости</a></li>
