--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
 
     <main>
-      <section class="container promo">
+      <section class="container">
         <div class="promo-top">
           <ul class="promo-list">
             <li class="promo-item-1 new">
@@ -103,7 +103,7 @@
             </div>
           </div>
           <div class="promo-right">
-            <ul class="promo-list">
+            <ul class="promo-list-right">
               <li class="promo-item-4">
                 <h3>Скидки 50%</h3>
                 <a href="#">На 350 товаров</a>
