безуспешная попытка сделать слайдер

--- a/catalog.html
+++ b/catalog.html
@@ -148,7 +148,7 @@
             </div>
 
             <ul class="catalog-list">
-              <li class="catalog-item">
+              <li class="catalog-item-catalog">
                 <div class="buy-bookmark visually-hidden">
                   <a class="button" href="#">Купить</a>
                   <a class="button" href="#">В Закладки</a>
@@ -164,7 +164,7 @@
                 <a class="old-price" href="#">22500 ₽.</a>
                 <a class="new-price" href="#">15500 ₽.</a>
               </li>
-              <li class="catalog-item">
+              <li class="catalog-item-catalog">
                 <div class="buy-bookmark visually-hidden">
                   <a class="button" href="#">Купить</a>
                   <a class="button" href="#">В Закладки</a>
@@ -180,7 +180,7 @@
                 <a class="old-price" href="#">30500 ₽.</a>
                 <a class="new-price" href="#">25500 ₽.</a>
               </li>
-              <li class="catalog-item new">
+              <li class="catalog-item-catalog new">
                 <div class="buy-bookmark visually-hidden">
                   <a class="button" href="#">Купить</a>
                   <a class="button" href="#">В Закладки</a>
@@ -195,7 +195,7 @@
                 </h3>
                 <a class="new-price" href="#">12500 ₽.</a>
               </li>
-              <li class="catalog-item">
+              <li class="catalog-item-catalog">
                 <div class="buy-bookmark visually-hidden">
                   <a class="button" href="#">Купить</a>
                   <a class="button" href="#">В Закладки</a>
@@ -211,7 +211,7 @@
                 <a class="old-price" href="#">22500 ₽.</a>
                 <a class="new-price" href="#">15500 ₽.</a>
               </li>
-              <li class="catalog-item new">
+              <li class="catalog-item-catalog new">
                 <div class="buy-bookmark visually-hidden">
                   <a class="button" href="#">Купить</a>
                   <a class="button" href="#">В Закладки</a>
@@ -227,7 +227,7 @@
                 <a class="old-price" href="#">30500 ₽.</a>
                 <a class="new-price" href="#">25500 ₽.</a>
               </li>
-              <li class="catalog-item">
+              <li class="catalog-item-catalog">
                 <div class="buy-bookmark visually-hidden">
                   <a class="button" href="#">Купить</a>
                   <a class="button" href="#">В Закладки</a>
@@ -243,7 +243,7 @@
                 <a class="old-price" href="#">30500 ₽.</a>
                 <a class="new-price" href="#">12500 ₽.</a>
               </li>
-              <li class="catalog-item new">
+              <li class="catalog-item-catalog new">
                 <div class="buy-bookmark visually-hidden">
                   <a class="button" href="#">Купить</a>
                   <a class="button" href="#">В Закладки</a>
@@ -259,7 +259,7 @@
                 <a class="old-price" href="#">22500 ₽.</a>
                 <a class="new-price" href="#">15500 ₽.</a>
               </li>
-              <li class="catalog-item">
+              <li class="catalog-item-catalog">
                 <div class="buy-bookmark visually-hidden">
                   <a class="button" href="#">Купить</a>
                   <a class="button" href="#">В Закладки</a>
@@ -275,7 +275,7 @@
                 <a class="old-price" href="#">30500 ₽.</a>
                 <a class="new-price" href="#">25500 ₽.</a>
               </li>
-              <li class="catalog-item">
+              <li class="catalog-item-catalog">
                 <div class="buy-bookmark visually-hidden">
                   <a class="button" href="#">Купить</a>
                   <a class="button" href="#">В Закладки</a>
