--- a/index.html
+++ b/index.html
@@ -70,38 +70,33 @@
           </ul>
         </div>
         <div class="promo-bottom">
-          <div class="promo-left">
-            <div class="gallery">
-              <div class="gallery-header">
+
+          <div class="slider">
+
+
+
+
+            <div class="slider-controls">
+              <i class="active"></i>
+              <i></i>
+            </div>
+
+            <ul class="slider-list">
+              <li class="slider-item">
                 <h3>Дрели</h3>
                 <p>Соседям на радость!</p>
-              </div>
-              <figure class="gallery-content">
-                <a href="#">
-                  <img src="img/ravshan.jpg" width="620" height="266" alt="Равшан Джамшутович">
-                </a>
-              </figure>
-              <div class="control-box">
-                <button class="button gallery-button gallery-button-back" type="button">Назад</button>
-                <button class="button gallery-button gallery-button-next" type="button">Вперед</button>
-              </div>
-              <div class="caption">
-                <a class="btn" href="catalog.html">Открыть каталог</a>
-              </div>
-              <ul class="slides-switches">
-                <li class="slide-radio">
-                  <button class="slide-btn">
-                    Первый слайд
-                  </button>
-                </li>
-                <li class="slide-radio">
-                  <button class="slide-btn">
-                    Второй слайд
-                  </button>
-                </li>
-              </ul>
-            </div>
+                <a class="slider-item-button button" href="catalog.html">Открыть каталог</a>
+              </li>
+              <li class="slider-item">
+                <h3>Перфораторы</h3>
+                <p>Настоящие мужские игрушки</p>
+                <a class="slider-item-button button" href="catalog.html">Открыть каталог</a>
+              </li>
+            </ul>
+
+
           </div>
+
           <div class="promo-right">
             <ul class="promo-list-right">
               <li class="promo-item-4">
@@ -126,7 +121,7 @@
               <a href="#">Все популярные товары</a>
             </div>
 
-           
+
             <div class="catalog-items">
               <div class="row">
                 <div class="catalog-item">
@@ -241,17 +236,16 @@
         </div>
       </div>
 
-      <section class="delivery-and-services"> <!-- не могу понять как это делать, видимо принцип работы блока как у слайдера -->
+      <section class="delivery-and-services">
 
         <div class="container">
 
           <div class="header-services">
             <h2>Сервисы</h2>
-            <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-
+            <p>Хороший интернет-магазин отличается от плохого не только ценами!<br> Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           </div>
 
-          <div class="services-description">
+          <div class="services-description container">
 
             <div class="services-item-1">
               <ul class="services-navigation">
